[package]
name = "mcp25xxfd"
description = "MCP2518FD and MCP251863 CAN-FD controller library"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/petschekr/mcp25xxFD"
license = "MIT OR Apache-2.0"
categories = [
    "hardware-support",
    "no-std",
    "embedded"
]
keywords = [
    "embedded-hal",
    "CAN",
    "MCP2517FD",
    "MCP2518FD",
    "MCP251863",
]

[dependencies]
embedded-hal = "1.0"
embedded-can = "0.4.1"
nb = "1.1.0"
modular-bitfield = "0.11.2"

[features]

[dev-dependencies]
embedded-hal-mock = "0.11.1"
